# VLM_manipulation

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
VLM_manip_sim/: .gitignore  README.md
VLM_manip_sim/asset/fruit/: ycb-apple.xml  ycb-orange.xml
VLM_manip_sim/asset/object/: dark_sky.xml  obj_blocks.xml  obj_cylinder_metal.xml  obj_place.xml  obj_target_coke.xml
VLM_manip_sim/asset/snack/: pringles.xml
VLM_manip_sim/asset/ur5e/: object_scene.xml  realworld.xml  scene-obj.xml  scene-ur5e.xml  scene-w-ground-all-obj.xml  scene-w-ground-blocks-only.xml  scene-w-ground-color.xml  scene-w-ground-obj.xml  scene-w-ground.xml
VLM_manip_sim/demo/: MUJOCO_LOG.TXT  demo_interpolation.py  interpolation_tools.py  owlv2_test.ipynb  sim_demo1_pnp.ipynb  sim_demo2_pnp_owlv2.ipynb
VLM_manip_sim/demo/figure/: fig_all_objects.ipynb  fig_blocks_only_scene.ipynb  fig_refreshments_scene.ipynb
VLM_manip_sim/models/realrobot/: RealRobot.py  gripper.py
VLM_manip_sim/models/utils/: grpp.py  util_vision.py
data/assets/beverage/: coke.xml  redbullcan.xml
data/assets/object/: dark_floor.xml  (+9 more)
notebooks/: gdino.ipynb  owlv2.ipynb  owlv2_test.ipynb  owlvit.ipynb  sim_demo2_pnp_owlv2.ipynb  sim_demo_pnp_reasoning.ipynb
src/: agent.py
src/detection_module/: gdino.py  owlv2.py  owlvit.py  utils.py
src/gdino_module/: gdino.py  utils.py
src/mllm_module/: __init__.py  conversation.py  gpt.py  paligemma.py
src/mujoco_env/: manipulator_agent.py
src/prompts/: __init__.py  prompts.py
tests/: test_gdino.py  test_gpt.py  test_owlv2.py  test_owlvit.py
(+5 files in other folders)
